# HandTrackingServer

./: .gitmodules  CMakeLists.txt  README.md
examples/: face_demo.cpp  hand_demo.cpp  iris_tracking_demo.cpp  multi_hand_demo.cpp  obj_tracking_demo.cpp  upper_body_demo.cpp
include/: aladin_process.h  model_manager.h  wrapper_model.pb.h  wrapper_model.proto
include/udp/: ofConstants.h  ofUtils.h  ofxNetwork.h
mediapipe/calculators/core/: BUILD  face_pass_through_calculator.cc  hand_pass_through_calculator.cc
mediapipe/examples/desktop/: demo_run_graph_main.cc
mediapipe/framework/formats/: BUILD
mediapipe/graphs/face_mesh/: face_mesh_desktop_live.pbtxt
mediapipe/graphs/hand_tracking/: BUILD
src/: aladin_process.cpp  main.cpp  model_manager.cpp  wrapper_model.pb.cc
src/smtp/: smtp.cpp  smtp.h
src/strategy/: README  indices.txt  main.cpp  pose_estimator.cpp  pose_estimator.h  scorer.cpp  scorer.h  stabilizer.cpp  stabilizer.h
src/udp/: ofUtils.cpp  ofxUDPManager.cpp
